--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -1,14 +1,14 @@
 name: Update gist with WakaTime stats
 on:
   schedule:
-    - cron: "55 * * * *"
+    - cron: "0 * * * *"
 jobs:
   update-gist:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
       - name: Update gist
-        uses: xiaozhaoqi/waka-box@master
+        uses: matchai/waka-box@master
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           GIST_ID: 07bff390df5f1b80cda37f0eabc51e48
